LPS-63681 - Correct notification alignment in mobile

--- a/modules/apps/platform/frontend/frontend-theme/frontend-theme-classic-web/src/main/resources/META-INF/resources/classic/_diffs/css/_custom.scss
+++ b/modules/apps/platform/frontend/frontend-theme/frontend-theme-classic-web/src/main/resources/META-INF/resources/classic/_diffs/css/_custom.scss
@@ -175,6 +175,14 @@ body {
 			}
 		}
 
+		.panel-notifications-count {
+			@include media-query(null, $breakpoint_tablet - 1) {
+				left: 2px;
+				position: relative;
+				top: 6px;
+			}
+		}
+
 		.icon-user, .user-full-name {
 			display: none;
 		}
